Alteração do projeto
Criação com Javascript

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/geradorde-shadow.css">
+    <link rel="stylesheet" href="css/geradordeboxshadow.css">
     <script src="js/geradordeboxshadow.js"></script>
     <title>Projeto Gerador de Box Shadow</title>
 </head>
@@ -87,6 +87,10 @@
           <div class="reference-input">
             <input type="text" id="color-value" name="color-value" />
           </div>
+        </div>
+        <div class="range-input-quadrado">
+          <label for="color">Cor do Quadrado:</label>
+          <input type="color" class="box">
         </div>
         <div class="form-control">
           <div class="range-input">
