--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/geradordeboxshadow.css">
-    <script src="js/geradordeboxshadow.js"></script>
-    <title>Projeto Gerador de Box Shadow</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gerador de Box Shadow</title>
+    <link rel="stylesheet" href="css/geradordeboxshadow.css" />
+    <script src="js/geradordeboxshadow.js" defer></script>
+  </head>
+  <body>
     <div id="box-shadow-generator">
       <div id="controls-container">
         <h2>Configurações da Box Shadow:</h2>
@@ -87,10 +88,6 @@
           <div class="reference-input">
             <input type="text" id="color-value" name="color-value" />
           </div>
-        </div>
-        <div class="range-input-quadrado">
-          <label for="color">Cor do Quadrado:</label>
-          <input type="color" class="box">
         </div>
         <div class="form-control">
           <div class="range-input">
